# sample-tests

./: .bandit.yaml  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .ruff.toml  AI_INSTRUCTIONS.md  Dockerfile  Makefile  README.md  config.py  conftest.py  docker-compose.yml  mypy.ini  playwright_commands.txt  pyproject.toml  pytest.ini
api/: conftest.py  test_contact_api.py  test_user_api.py
common/: api_client.py  data_factory.py  db_client.py  decorators.py  http_status.py  models.py  routes.py  utils.py
docker/: Dockerfile
framework/ui/: ag_grid.py  driver.py  element.py  fixtures.py  list_elements.py
resources/sql/: create_tables.sql  seed_data.sql
resources/test_data/: contacts.json  users.json
ui/: conftest.py  fixtures.py
ui/decorators/: auth_decorator.py
ui/helpers/: ag_grid_helper.py  url_helper.py
ui/pages/: asset_class_page.py  base_page.py  basis_adjustment_page.py  bonus_profile_page.py  contact_page.py  depreciation_profile_page.py  login_page.py  user_page.py
ui/pages/components/: asset_class_dialog.py  basis_adjustment_dialog.py  bonus_profile_dialog.py  contact_dialog.py  depreciation_profile_dialog.py  user_dialog.py
ui/pages/tax_depreciation/: asset_class_page.py  basis_adjustment_page.py  bonus_profile_page.py  depreciation_profile_page.py
ui/tests/: test_asset_class.py  test_contacts.py  test_login.py  test_users.py
ui/tests/examples/: test_auth_examples.py
ui/tests/tax-depreciation/: test_asset_class_configurations.py  test_basis_adjustment_configurations.py  test_bonus_profile_configurations.py  test_depreciation_profile_configurations.py
ui/tests/tax_depreciation/: test_asset_class_configurations.py  test_bonus_profile_configurations.py  (+2 more)
(+2 files in other folders)
