[project]
name = "lucasys-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergey Andronnikov",email = "sergey.andronnikov@altexsoft.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest-playwright (>=0.7.0,<0.8.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "faker (>=37.4.0,<38.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '/venv/'

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
